[tool.poetry]
name = "diff-solv"
version = "0.1.0"
description = ""
authors = ["Vladislav Vinokurov <vinokurov.va@phystech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.7.0"
numpy = "^2.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
